--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+body {
+    background-color: #e2e7e7;
+}
+
 nav a img {
     border-radius: 40%;
 }
 
 .scrolled {
-    transition: 500ms;
+    transition: all 500ms;
 }
 
 .bg-primary {
@@ -14,12 +18,12 @@ nav a img {
     background-color: #E9ECE6 !important;
 }
 
-.bg {
-    background-color: beige;
+.nav-bg {
+    border-bottom: 2px solid rgb(0, 0, 0) ;
 }
 
 .main-bg {
-    background-image: url('images/maing-bg.png');
+    background-image: url('images/main-bg22.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -53,27 +57,87 @@ nav a img {
 }
 
 .upper-border {
-    border-top: 1px solid white;
+    border-top: 1px solid rgb(253, 253, 253);
 }
 
 .about-content {
-    width: 60%;
+    background-color: rgb(248, 248, 248);
+    width: 80%;
     margin: 100px auto;
     padding: 50px;
-    border: 2px solid black;
+    box-shadow: 5px 5px 20px 10px rgb(211, 210, 210);
+    text-align: center;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-img-container {
+    width: 20%;
+    margin-right: 5%;
+}
+
+.about-h1 {
+    border-bottom: 5px solid rgb(0, 118, 148);
 }
 
 .about-img {
-    height: 400px;
-    width: 400px;
-    background-color: blue;
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    background-image: url('images/pfp.jpg');
+    background-size: cover;
+    border-radius: 50%;
 }
 
 .about-text {
-    height: 400px;
-    width: 400px;
-    background-color: aqua;
+    border-left: 1px solid #000000;
+    width: 70%;
+    padding-left: 5%;
+    text-align: justify;
+}
+
+.skills-content {
+    background-color: rgb(248, 248, 248);
+    width: 80%;
+    margin: 100px auto;
+    padding: 50px;
+    box-shadow: 5px 5px 20px 10px rgb(211, 210, 210);
     text-align: center;
+}
+
+.skills-h1 {
+    border-bottom: 5px solid rgb(0, 118, 148);
+    display: inline-block;
+}
+
+.skills-logo-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.skills-logo {
+    flex-grow: 1;
+    max-width: 10%;
+    font-size: 1.3em;
+    font-weight: 500;
+    color: #555555;
+}
+
+.skills-img {
+    width: 100%;
+    border: 1px solid rgb(235, 235, 235);
+    border-radius: 20%;
+}
+
+.footer-container {
+    width: 100%;
+    text-align: center;
+    padding: 20px !important;
+    background-color: #0e0d0d;
+    color: #acb6b6;
 }
