--- a/css/home.css
+++ b/css/home.css
@@ -1,29 +1,9 @@
-body {
-    background-color: #e2e7e7;
-}
-
-nav a img {
-    border-radius: 40%;
-}
-
 .scrolled {
     transition: all 500ms;
 }
 
-.bg-primary {
-    background-color: white !important;
-}
-
-.bg-secondary {
-    background-color: #E9ECE6 !important;
-}
-
-.nav-bg {
-    border-bottom: 2px solid rgb(0, 0, 0) ;
-}
-
 .main-bg {
-    background-image: url('images/main-bg22.png');
+    background-image: url('../images/main-bg22.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -60,6 +40,10 @@ nav a img {
     border-top: 1px solid rgb(253, 253, 253);
 }
 
+#about {
+    scroll-margin-top: 150px;
+}
+
 .about-content {
     background-color: rgb(248, 248, 248);
     width: 80%;
@@ -87,7 +71,7 @@ nav a img {
     width: 100%;
     height: 0;
     padding-bottom: 100%;
-    background-image: url('images/pfp.jpg');
+    background-image: url('../images/pfp.jpg');
     background-size: cover;
     border-radius: 50%;
 }
@@ -132,12 +116,4 @@ nav a img {
     width: 100%;
     border: 1px solid rgb(235, 235, 235);
     border-radius: 20%;
-}
-
-.footer-container {
-    width: 100%;
-    text-align: center;
-    padding: 20px !important;
-    background-color: #0e0d0d;
-    color: #acb6b6;
 }
